# koppa-lang

./: .geminiignore  BUILD_KOPPA.py  CHANGELOG.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  install-web.sh  install.bat  install.sh  koppa.bat  koppa.sh  pyproject.toml  setup.py
.github/workflows/: pages.yml  release.yml  test.yml
Formula/: koppa.rb
docs/: GETTING_STARTED.md  LANGUAGE_SPEC.md
examples/: cyber_demo.kop  dns_recon.kop  features_test.kop  hash_demo.kop  hello.kop  hello.kpc  jwt_attack.kop  port_scanner.kop  quick_scan.kop  sec_native_demo.kop  try_catch_demo.kop  web_audit.kop  web_check.kop
pkg/: build-deb.sh
scoop/: koppa.json
src/: apollo_opcodes.py  compiler.py  deno_compiler.py  deno_runtime.ts  interpreter.py  koppa.py  koppa_lsp.py  koppa_opcodes.py  lexer.py  parser.py  pkg_manager.py  rust_transpiler.py  stdlib_native.py  vm.py
src/koppa_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
stdlib/: core.kop  network.kop  security.kop  vuln.apo
tests/: run_tests.py  test_deno.kop
vscode-extension/: extension.js  language-configuration.json  package.json
vscode-extension/snippets/: koppa.json
vscode-extension/syntaxes/: koppa.tmLanguage.json
winget/: KoppaLang.Koppa.yaml
www/: cheatsheet.html  index.html  install.sh  playground.html
