[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koppa-lang"
version = "2.0.1"
description = "KOPPA — Advanced Pentesting Domain-Specific Language"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "KOPPA Team", email = "kua.kuakun@gmail.com" }]
keywords = ["pentesting", "security", "dsl", "language", "scripting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
koppa = "koppa:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
